Archive2/f1/a4031b3e2752a3/output
main.cpp:30:16: error: use of overloaded operator '+' is ambiguous (with operand types 'MyClass<int>' and 'MyClass<int>')
    auto z = x + y;
             ~ ^ ~
main.cpp:13:11: note: candidate function [with T0 = int, T1 = int]
        ::operator+(MyClass<T0> const& a, MyClass<T1> const& b);
          ^
main.cpp:21:1: note: candidate function [with T0 = int, T1 = int]
operator+(MyClass<T0> const& a, MyClass<T1> const& b)
^
1 error generated.
